# wordplay

./: README.md
puzzle_poetry_ii/: README.md  helpster.py  main.py  pyproject.toml  winning_sets.json  words_large.json  words_med.json  words_med_reduced.json
torus_crossword/: .gitignore  15x15_grid_failures_AA_42.json  15x15_grid_failures_AD_42_flipped.json  15x15_grid_failures_DA_42.json  15x15_grid_failures_DA_42_flipped.json  15x15_grid_solutions.json  README.md  add_star.py  api_sort.py  bad_stars.json  bad_stars_flipped.json  bad_templates.json  bests1.json  bests_1728767127.json  check_bad_templates.py  config.py  config.yaml  create_words_omitted.py  delete.json  delete.py  delete_me.py  delete_word_stars.py  fails.json  fast_search.py  filter.py  filter_solutions.py  filter_word_stars_with_omitted.py  generate_ics.py  generate_initials.py  get_ic_words.py  goofoffs.py  ic_words.py  ideas.txt  last.sh  lib.py  liked_templates.json  living_stars_with_bad_solves.py  loop_script.sh  main.py  main_new.py  (+35 more)
torus_crossword/bad_solutions/: 15x15_grid_solutions_DA_42_bad.json
torus_crossword/failures/: 15x15_grid_failures_AA_36.json  15x15_grid_failures_AA_36_flipped.json  15x15_grid_failures_AA_38.json  15x15_grid_failures_AA_38_flipped.json  15x15_grid_failures_AA_40_flipped.json  15x15_grid_failures_AA_42.json  15x15_grid_failures_AD_34_flipped.json  15x15_grid_failures_AD_36_flipped.json  15x15_grid_failures_AD_40_flipped.json  15x15_grid_failures_AD_42_flipped.json  15x15_grid_failures_DA_34.json  15x15_grid_failures_DA_36.json  15x15_grid_failures_DA_38.json  (+24 more)
(+74 files in other folders)
