[tool.poetry]
name = "puzzle-poetry-ii"
version = "0.1.0"
description = ""
authors = ["Matt Abate <mabate13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.4"
language-tool-python = "^2.8"
gingerit = "^0.0.0.1"
textblob = "^0.18.0.post0"
nltk = ">=3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
