[tool.poetry]
name = "torus-crossword"
version = "0.1.0"
description = ""
authors = ["Matt Abate <mabate13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.4"
matplotlib = "^3.9.1"
numpy = "^2.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
keyboard = "^0.13.5"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
